--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://localhost:3306/db_PlayGround?autoReconnect=true&&useSSL=false&&serverTimezone=Europe/Amsterdam
 spring.datasource.username=devUser
 spring.datasource.password=devUser_PASSWORD
+
+
+# server properties
+server.port= 9090
