--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,40 @@
-# hibernate properties
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/db_PlayGround?autoReconnect=true&&useSSL=false&&serverTimezone=Europe/Amsterdam
+
+# ==============================================
+# TOMCAT
+# ==============================================
+server.error.whitelabel.enabled=false
+server.port= 9090
+
+# ==============================================
+# SMTP EMAIL
+# ==============================================
+spring.mail.host=smtp.strato.com 
+spring.mail.username=info@ixpert.org 
+spring.mail.password=info_PASSWORD 
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ==============================================
+# DATA SOURCE
+# ==============================================
+spring.datasource.url=jdbc:mysql://localhost:3306/db_PlayGround?useSSL=false
 spring.datasource.username=devUser
 spring.datasource.password=devUser_PASSWORD
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.max-active=5
+spring.datasource.tomcat.test-on-borrow=true
 
+# =======================================
+# JPA/HIBERNATE
+# =======================================
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
 
-# server properties
-server.port= 9090
+# =======================================
+# THYMELEAF CONFIGURATION
+# =======================================
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
