--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,15 @@ server.port= 9090
 # ==============================================
 # SMTP EMAIL
 # ==============================================
-spring.mail.host=smtp.strato.com 
-spring.mail.username=info@ixpert.org 
-spring.mail.password=info_PASSWORD 
+spring.mail.host=smtp.strato.com
+#pring.mail.host=smtp.gmail.com
+
+spring.mail.username=info@ixpert.org
+#spring.mail.username=iXpert.Technologies.Ltd@gmail.com
+
+spring.mail.password=info_PASSWORD
+#spring.mail.password=4yKT6yAF8OdO
+
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -22,7 +28,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.datasource.url=jdbc:mysql://localhost:3306/db_PlayGround?useSSL=false
 spring.datasource.username=devUser
 spring.datasource.password=devUser_PASSWORD
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.tomcat.max-wait=10000
 spring.datasource.tomcat.max-active=5
 spring.datasource.tomcat.test-on-borrow=true
@@ -31,7 +37,9 @@ spring.datasource.tomcat.test-on-borrow=true
 # JPA/HIBERNATE
 # =======================================
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create // this option does not write to the schema at the end of the DB session. Which means every time the application is restarted, the records will be deleted.
+spring.jpa.hibernate.ddl-auto=update
+
 
 # =======================================
 # THYMELEAF CONFIGURATION
