--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,13 @@
         </dependency>
 
         <dependency>
+            <groupId>org.webjars.bower</groupId>
+            <artifactId>zxcvbn</artifactId>
+            <version>4.4.2</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
